--- a/JULYA.mediawiki
+++ b/JULYA.mediawiki
@@ -8,8 +8,9 @@
 * The [http://juliablogs.com/ Julia Planet]
 * [http://blog.leahhanson.us/drafts/julia-helps.html  Leah Hanson's blog post about helpful Julia functions (help, methods, etc..)]
 * Using [http://iaindunning.com/2013/mip-callback.html JuMP to Solve a TSP with Lazy Constraints]	
-
-
+* Alasdair McAndrew blogs about investigating the [https://amca01.wordpress.com/2014/01/08/meeting-julia/ fitting of an SIR model of disease spread to an outbreak of influenza] at a boarding school.
+* [http://assoc.tumblr.com/post/70484963303/getting-comfortable-with-the-julia-programming-language Getting comfortable with the julia programming language].
+* [http://assoc.tumblr.com/post/71454527084/cool-things-you-can-do-in-julia Cool things you can do in Julia].
 
 
 = DOCUMENTATION =
