--- a/Database.mediawiki
+++ b/Database.mediawiki
@@ -7,6 +7,7 @@
 * Julia Package for parsing the [https://github.com/loladiro/DWARF.jl DWARF file format].
 * [https://github.com/timholy/HDF5.jl HDF5.jl]
 * [https://github.com/JuliaLang/JSON.jl JSON parsing and printing].
+* [https://github.com/ihnorton/LibXML.jl XML parsing] in Julia.
 
 
 = Database =
