--- a/Graphics-Visualization.mediawiki
+++ b/Graphics-Visualization.mediawiki
@@ -5,7 +5,7 @@ Graphics, Plots and other Visualization libraries and packages. Also includes bl
 
 == Graphics == 
 * Images.jl:: [https://github.com/timholy/Images.jl An image library] for Julia.
-
+* ImageView.jl:: An [https://github.com/timholy/ImageView.jl interactive display of images and movies].
 
 == Plotting ==
 * Gaston
