--- a/Networking-Web-Server.mediawiki
+++ b/Networking-Web-Server.mediawiki
@@ -7,10 +7,10 @@ Networking, Events frameworks and other Web related things go here:
 = Cloud =
 * [https://github.com/amitmurthy/AWS.jl AWS.jl] supports the EC2 and S3 API's, letting you start / stop EC2 instances dynamically.
 
-
 === Documentation ===
 * [http://docs.julialang.org/en/latest/stdlib/base/#parallel-computing How to use AWS EC2 machines via addprocs].
 * [http://blog.leahhanson.us/using-tcp-sockets-in-julia.html TCP Sockets documentation for webstack.jl]
+* The [http://juliawebstack.org Julia Webstack] is a family of modules for building web services in the Julia language, with documentation for Morsel, Meddle, WebSockets, HttpServer, HttpParser, and HttpCommon.
 
 
 == Parallel Computing ==
@@ -30,6 +30,7 @@ Networking, Events frameworks and other Web related things go here:
 * WWWClient.jl: is a [https://github.com/loladiro/WWWClient.jl  HTTP client] written in julia (depends on joyent/http-parser) for HTTP parsing. 
 * ZMQ.jl: [https://github.com/JuliaLang/ZMQ.jl Julia interface to ZeroMQ]
 * Thin Julia [https://github.com/amitmurthy/LibCURL.jl wrapper of libCURL].
+
 
 == Networking ==
 * [https://github.com/loladiro/GnuTLS.jl Transport Level Security for Julia Streams provided by GnuTLS].
