--- a/Math-Science.mediawiki
+++ b/Math-Science.mediawiki
@@ -47,6 +47,17 @@
 
 
 
+== Statistics ==
+* [https://github.com/JuliaStats/Stats.jl Basic statistics functions for Julia].
+* The [http://juliastats.github.io/Distributions.jl/index.html Distributions] package.
+* The [http://juliastats.github.io/DataFrames.jl/io.html DataFrames manual section on IO]
+* [https://github.com/dmbates/MixedModels.jl GLMM]
+* [https://github.com/lindahua/DiscreteInference.jl Viterbi algorithm]
+* [https://github.com/johnmyleswhite/SmoothingKernels.jl Smoothing kernels for use in kernel regression and kernel density estimation].
+* MCMC.jl:: is a [https://github.com/JuliaStats/MCMC.jl generic engine for implementing Bayesian statistical models using Markov Chain Monte Carlo (MCMC) methods]. 
+* Stats.jl:: [https://github.com/JuliaStats/Stats.jl Stats meta-package].
+
+
 == PHYSICS ==
 * [https://github.com/kofron/Codata.jl Codata.jl]
 * [https://github.com/ggggggggg/Physical.jl Physical.jl]
