--- a/Math-Science.mediawiki
+++ b/Math-Science.mediawiki
@@ -62,6 +62,8 @@
 * Rmath.jl:: [https://github.com/dmbates/Rmath.jl  Archive of functions that emulate R's d-p-q-r functions for probability distributions].
 * RDatasets.jl:: Julia package for [https://github.com/johnmyleswhite/RDatasets.jl loading many of the data sets] available in R.
 * TimeSeries.jl:: [https://github.com/JuliaStats/TimeSeries.jl Time-series toolkit] for Julia.
+* TimeModels.jl:: [https://github.com/JuliaStats/TimeModels.jl Modeling time series] in Julia.
+* LM.jl:: [https://github.com/JuliaStats/LM.jl Linear models] in Julia.
 
 
 = PHYSICS =
