--- a/Hardware.mediawiki
+++ b/Hardware.mediawiki
@@ -4,6 +4,8 @@
 * PortAudio.jl:: [https://github.com/ssfrr/PortAudio.jl Julia interface API] for the [http://en.wikipedia.org/wiki/PortAudio PortAudio] (audio) library.
 * [https://github.com/ssfrr/AudioIO.jl AudioIO.jl] is a Julia library for interfacing to audio streams, which include playing to and recording from sound cards, reading and writing audio files, sending to network audio streams, etc. Currently only playing to the sound card through PortAudio is supported.
 
+== OpenSlide ==
+* OpenSlide.jl:: [https://github.com/ihnorton/OpenSlide.jl OpenSlide bindings] for Julia.
 
 == ARM == 
 * Bug status of the [https://github.com/JuliaLang/julia/issues/3134 Julia port to ARM]
