--- a/Language-API.mediawiki
+++ b/Language-API.mediawiki
@@ -2,7 +2,7 @@ LLVM, compilers and other programming language wrapper API's.
 
 = LLVM =
 * Clang.jl:: Julia interface to [https://github.com/ihnorton/Clang.jl libclang and C wrapper generator].
-
+* CIndex.jl:: Julia access to the [https://github.com/vtjnash/CIndex.jl libclang interface of the LLVM Clang compiler].
 
 = Java =
 * [http://aviks.github.io/JavaCall.jl/ JavaCall.jl] is a package that lets you call Java programs from Julia. 
