--- a/Desktop-Utilities.mediawiki
+++ b/Desktop-Utilities.mediawiki
@@ -8,8 +8,12 @@
 * [https://github.com/aviks/Taro.jl Taro.jl] can process office documents in Julia. 
 
 
+== Document Generator == 
+* Judo.jl:: is a [https://github.com/dcjones/Judo.jl Julia document generator], which takes documents written in pandoc markdown and converts them into html, but differs from general purpose markdown tools in a few ways.
+
 == DVCS API ==
 * [https://github.com/jakebolewski/LibGit2.jl Julia bindings to the LibGit2 library], https://github.com/libgit2
+
 
 
 
@@ -18,7 +22,6 @@
 == GUI ==
 * The Julia interface for the [https://github.com/JuliaLang/Tk.jl Tk windowing toolkit].
 * Julia interface to the [https://github.com/JuliaLang/Gtk.jl GTK windowing toolkit].
-
 
 
 = REPL / Editor Tools = 
