--- a/Database.mediawiki
+++ b/Database.mediawiki
@@ -1,14 +1,17 @@
+Encoding, Database, IO....
+
 = IO interfaces =
 * [https://github.com/karbarcca/NetCDF.jl  NetCDF support for a high-level and a medium-level interface for writing and reading netcdf files], for the Julia programming language.
 
 
-= IO libraries for Data/File formats =
+= Encoding, IO libraries for Data/File formats =
 * DF :: [https://github.com/johnmyleswhite/DataFramesIO.jl Advanced import/export tools for DataFrames: Stata, SPSS, Excel, JSON].
 * DWARF :: Julia Package for parsing the [https://github.com/loladiro/DWARF.jl DWARF file format].
 * HDF :: [https://github.com/timholy/HDF5.jl HDF5.jl]
 * JSON :: [https://github.com/JuliaLang/JSON.jl JSON parsing and printing].
 * MachO :: [https://github.com/loladiro/MachO.jl An implementation of the MachO file format].
 * XML :: [https://github.com/ihnorton/LibXML.jl XML parsing] in Julia.
+* Codecs.jl:: [https://github.com/dcjones/Codecs.jl Common data encoding algorithms].
 
 
 = Database =
