--- a/README.mediawiki
+++ b/README.mediawiki
@@ -1,6 +1,6 @@
 Curated bits and bytes of [https://github.com/JuliaLang Julia] language learning resources, API's, libraries, packages, blog links, howto's, etc...
 
-'''Repo mirror:: [https://bitbucket.org/svaksha/julya https://bitbucket.org/svaksha/julya]'''.
+'''Git mirror:: [https://bitbucket.org/svaksha/julya https://bitbucket.org/svaksha/julya]'''.
 
 == Pages ==
 * [https://github.com/svaksha/julya/blob/master/AI-ML-NLP.mediawiki AI-ML-NLP]
